FEAT: og:image added

--- a/public/500.html
+++ b/public/500.html
@@ -14,7 +14,7 @@
   }
   h1 {
     margin: 100px auto 0 auto;
-    color: var(--stroke-color);
+    color: black;
     font-family: 'Encode Sans Semi Condensed', Verdana, sans-serif;
     font-size: 10rem; line-height: 10rem;
     font-weight: 200;
